 - API: Removed obsolete code from CControl which stored the working area of SingleCDockables. This data is already stored by CommonSingleDockableLayout
 - Bugfix: The working-area of SingleCDockables was not set if the working are was created lazily while reading a layout
 - API: The new CControlPerspectiveBlop allows clients to read and write entire layout files without the need of creating any CDockables
 ! API: Removed the mapping between factories and MultipleCDockables that was stored in CSetting, but that was not accessed anywhere
 - Bugfix: CombinedStackDockContentPane.getMinimumSize returned a value about twice as big as necessary 
 - Bugfix: CPerspective, the invisible dockables are now stored when writing to/reading from a file
 - Bugfix: When converting a CPerspective to a CSetting, visible items must store their location as well, in case they are not loaded properly
 - Bugfix: calling "DefaultDockRelocatorEvent.forbid" on a "search", did not result in the search continuing with another station

[v1.1.1p8g]
 - Bugfix: Moving one Dockable of a maximized stack in the minimized area did throw an exception
 - Bugfix: Moving a maximized Dockable with a working-area to the minimized area did store an invalid location of the dockable
 - API: CGridArea/CWorkingArea will not replace a maximized dockable by another dockable in any case

[v1.1.1]
 - Bugfix: in the conversion from CSetting to CPerspective the location of invisible CDockables was ignored
 - API: VetoableDockRelocatorEvent now also tells the location of the mouse
 - API: WizardSplitDockStation can now show a gap on the side where it is moveable, the default size of the gap is set to 3

[v1.1.2p1]
 ! API: Added method "isEnabled" to ExpandableToolbarItem and all associated listeners.
 - API: ToolbarItemDockable.isEnabled now returns false if there is no ToolbarItem to show in some state
    
[Todo]
- Drop StackDockStation over Dockable and merge them