@@ -820,6 +820,7 @@
 [v1.1.2p1]
  ! API: Added method "isEnabled" to ExpandableToolbarItem and all associated listeners.
  - API: ToolbarItemDockable.isEnabled now returns false if there is no ToolbarItem to show in some state
-    
+ - API: Toolbar/ToolbarContainer/ToolbarGroupDockStation now all support custom background painting (with keys ThemeManager.BACKGROUND_PAINT + ".station.toolbar"/".station.toolbar.container"/".station.toolbar.group")
+     
 [Todo]
 - Drop StackDockStation over Dockable and merge them
